@@ -1,20 +1,13 @@
 package git_package;
 
 import java.awt.*;
-import java.io.BufferedReader;
-import java.io.BufferedWriter;
-import java.io.File;
-import java.io.FileInputStream;
-import java.io.FileOutputStream;
-import java.io.FileReader;
-import java.io.FileWriter;
-import java.io.IOException;
-import java.io.InputStream;
-import java.io.OutputStream;
+import java.io.*;
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.util.ArrayList;
 import java.util.Objects;
+import java.util.concurrent.Executors;
+import java.util.function.Consumer;
 
 import javax.swing.JOptionPane;
 
@@ -25,13 +18,23 @@ public class Function_Library {
 	private ArrayList<String> remoteBranches;
 
 	public Function_Library() {
-		gitFolder = getUserHome();
 		userName = getUserName();
 	}
-	private boolean isWindows() {
+	boolean isWindows() {
 		return System.getProperty("os.name").toLowerCase().contains("windows");
 	}
-
+	void info(){
+		String nameOS = "os.name";
+		String versionOS = "os.version";
+		String architectureOS = "os.arch";
+		System.out.println("\n    The information about OS");
+		System.out.println("\nName of the OS: " +
+				System.getProperty(nameOS));
+		System.out.println("Version of the OS: " +
+				System.getProperty(versionOS));
+		System.out.println("Architecture of THe OS: " +
+				System.getProperty(architectureOS));
+	}
 	private boolean done(){
 		if(isWindows())
 			return Preferences.contents.containsKey("git")
@@ -94,7 +97,7 @@ public class Function_Library {
 	}
 
 	boolean GITfolderExists(String location) {
-		File folder = new File(location+"\\.git");
+		File folder = new File(location+"/.git");
 		return folder.isDirectory();
 	}
 	private boolean GITprogramExists() {
@@ -123,15 +126,38 @@ public class Function_Library {
 	public void print(String i){System.out.println(i);}
 	private void cmd(String command) {
 		try {
-			Runtime.getRuntime().exec(command);
+			System.out.println("command: "+command);
+			if(isWindows())
+				Runtime.getRuntime().exec("cmd /c start cmd.exe /K \""+command);
+			else {
+				try {
+					BufferedWriter output = new
+							BufferedWriter(new FileWriter(getUserHome()+"/commands.sh",false));
+					output.write("#!/bin/bash\n");
+					output.write(command);
+					output.close();
+					File f = new File(getUserHome()+"/commands.sh");
+					f.setExecutable(true);
+					ProcessBuilder pb = new ProcessBuilder(getUserHome()+"/commands.sh");
+					Process p = pb.start();
+					BufferedReader reader = new BufferedReader(new InputStreamReader(p.getInputStream()));
+					String line = null;
+					while ((line = reader.readLine()) != null) {
+						System.out.println(line);
+					}
+					f.delete();
+				}
+				catch (IOException e) {
+					e.printStackTrace();
+				}
+			}
 		} catch (IOException e) {
 			e.printStackTrace();
+			System.exit(1);
 		}
 	}
 	public void cloneGIT(String location) {
-		String command = "cmd /c start cmd.exe /K \""
-				+ "cd "
-				+ "\""+	location +"\" && "
+		String command =  "cd \""+ location +"\" && "
 				+ "git clone ssh://git@fisheye01.ua.edu:7999/ban/uabanner.git && "
 				+ "exit\"";
 		cmd(command);
@@ -139,41 +165,42 @@ public class Function_Library {
 	private void createBranch(String newBranch) {
 		String command;
 		if(isRemoteGIT(newBranch))
-			command="cmd /c start cmd.exe /K \""
-					+ "cd \"" +	gitFolder +"\" && "
-					+ "git checkout prod && "
-					+ "git pull --progress -v --no-rebase \"origin\" prod && "
-					+ "git checkout -b " + newBranch + " && "
-					+ "git pull --progress -v --no-rebase \"origin\" "+newBranch +" && "
-					+ "exit \"";
+			command=
+					"cd \"" +	gitFolder +"\" && "
+							+ "git checkout prod && "
+							+ "git pull --progress -v --no-rebase \"origin\" prod && "
+							+ "git checkout -b " + newBranch + " && "
+							+ "git pull --progress -v --no-rebase \"origin\" "+newBranch +" && "
+							+ "exit ";
 		else
-			command="cmd /c start cmd.exe /K \""
-					+ "cd \"" +	gitFolder +"\" && "
-					+ "git checkout prod && "
-					+ "git pull --progress -v --no-rebase \"origin\" prod && "
-					+ "git checkout -b " + newBranch + " && "
-					//+ "git pull --no-rebase && "
-					+ "exit \"";
+			command=
+					"cd \"" +	gitFolder +"\" && "
+							+ "git checkout prod && "
+							+ "git pull --progress -v --no-rebase \"origin\" prod && "
+							+ "git checkout -b " + newBranch + " && "
+							//+ "git pull --no-rebase && "
+							+ "exit";
 		cmd(command);
 	}
 	public void switchBranch(String branch) {
+		System.out.println("gitFolder: "+gitFolder);
 		String command;
 		if (!branch.equals(getBranch())) {
 			if(!isLocalGIT(branch))
 				createBranch(branch);
 			else {
 				if(isRemoteGIT(branch))
-					command = "cmd /c start cmd.exe /K \""
-							+ "cd \"" +	gitFolder +"\" && "
-							+ "git checkout "+branch + " && "
-							+ "git.exe pull --no-rebase \"origin\" "+branch+" && "
-							+ "exit \"";
+					command =
+							"cd \"" +	gitFolder +"\" && "
+									+ "git checkout "+branch + " && "
+									+ "git pull --no-rebase \"origin\" "+branch+" && "
+									+ "exit";
 				else
-					command = "cmd /c start cmd.exe /K \""
-							+ "cd \"" +	gitFolder +"\" && "
-							+ "git checkout "+branch + " && "
-							//+ "git.exe pull --no-rebase \"origin\" "+switchedBranch+" && "
-							+ "exit \"";
+					command =
+							"cd \"" +	gitFolder +"\" && "
+									+ "git checkout "+branch + " && "
+									//+ "git pull --no-rebase \"origin\" "+switchedBranch+" && "
+									+ "exit";
 				cmd(command);
 			}
 		}
@@ -182,17 +209,17 @@ public class Function_Library {
 		String branch = getBranch();
 		if(comment.equals("")|| comment == null)
 			comment=branch;
-		String command = "cmd /c start cmd.exe /K \""
-				+ "cd \"" +	gitFolder +"\" && "
-				+ "git add --all && "
-				+ "git commit -v -a -m \""+comment+"\" && "
-				+ "git checkout sevl && "
-				+ "git pull && "
-				+ "git merge " +branch+" && "
-				+ "git push --progress \"origin\" sevl:sevl && "
-				+ "git checkout " +branch+ " && "
-				+ "git push --progress \"origin\" " + branch + " && "
-				+ "exit \"";
+		String command =
+				"cd \"" +	gitFolder +"\" && "
+						+ "git add --all && "
+						+ "git commit -v -a -m \""+comment+"\" && "
+						+ "git checkout sevl && "
+						+ "git pull && "
+						+ "git merge " +branch+" && "
+						+ "git push --progress \"origin\" sevl:sevl && "
+						+ "git checkout " +branch+ " && "
+						+ "git push --progress \"origin\" " + branch + " && "
+						+ "exit \"";
 		cmd(command);
 	}
 	public void push(String comment) {
@@ -200,41 +227,40 @@ public class Function_Library {
 		if(comment.equals("")|| comment == null) {
 			comment=branch;
 		}
-		String command = "cmd /c start cmd.exe /K \""
-				+ "cd \"" +	gitFolder +"\" && "
-				+ "git add --all && "
-				+ "git commit -v -a -m \""+comment+"\" && "
-				+ "git push --progress \"origin\" " + branch + " && "
-				+ "exit \"";
+		String command =
+				"cd \"" +	gitFolder +"\" && "
+						+ "git add --all && "
+						+ "git commit -v -a -m \""+comment+"\" && "
+						+ "git push --progress \"origin\" " + branch + " && "
+						+ "exit \"";
 		cmd(command);
 	}
 	public void fetch() {
-		String command = "cmd /c start cmd.exe /K \""
-				+ "cd \"" +	gitFolder +"\" && "
-				+ "git fetch -v --progress \"origin\" && "
-				+ "exit \"";
+		String command =
+				"cd \"" +	gitFolder +"\" && "
+						+ "git fetch -v --progress \"origin\" && "
+						+ "exit \"";
 		cmd(command);
 	}
 	public void hardReset() {
-		String command = "cmd /c start cmd.exe /K \""
-				+ "cd \"" +	gitFolder +"\" && "
-				+ "git fetch && "
-				+ "git reset --hard origin/master && "
-				+ "git pull && "
-				+ "exit \"";
+		String command =
+				"cd \"" +	gitFolder +"\" && "
+						+ "git fetch && "
+						+ "git reset --hard origin/master && "
+						+ "git pull && "
+						+ "exit \"";
 		cmd(command);
 	}
 	public void diff() {
-		String command = "cmd /c start cmd.exe /K \""
-				+ "cd \"" +	gitFolder +"\" && "
-				+ "git.exe diff --name-only\"";
+		String command =
+				"cd \"" +	gitFolder +"\" && "
+						+ "git diff --name-only\"";
 		cmd(command);
 	}
 	public void pull() {
-		String command = "cmd /c start cmd.exe /K \""
-				+ "cd \"" +	gitFolder +"\" && "
-				+ "git.exe pull --progress -v --no-rebase \"origin\" "+getBranch()+" && "
-				+ "exit \"";
+		String command =
+				"cd \"" +	gitFolder +"\" && "
+						+ "git pull --progress -v --no-rebase \"origin\" "+getBranch()+" ";
 		cmd(command);
 	}
 
@@ -245,7 +271,7 @@ public class Function_Library {
 	public String getSSH_RSA(){
 		String line=null;
 		try {
-			BufferedReader br = new BufferedReader(new FileReader(getUserHome()+ "\\.ssh\\id_rsa.pub"));
+			BufferedReader br = new BufferedReader(new FileReader(getUserHome()+ "/.ssh/id_rsa.pub"));
 			line= br.readLine();
 			line=line.trim();
 			br.close();
@@ -281,7 +307,7 @@ public class Function_Library {
 		String item;
 		try {
 			String[] parsedLine;
-			BufferedReader br = new BufferedReader(new FileReader(gitFolder+ "\\.git\\packed-refs"));
+			BufferedReader br = new BufferedReader(new FileReader(gitFolder+ "/.git/packed-refs"));
 			while ((line = br.readLine()) != null) {
 				parsedLine = line.split("/");
 				if(parsedLine.length>1) {
@@ -301,7 +327,7 @@ public class Function_Library {
 				"[fisheye01.ua.edu]:7999,[10.8.81.153]:7999 ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDSNpv15GY6jxbrfiTagxc1233xtqHhUfzGXtx+sCIzQUHWmZ0zEf0aYPD/xjNKE48oB3SZ0ciKoV/YT/D8x3Hm7E6P8CldunWjny/WPd4EGZLNd43vmD0xXVZeszL+T1zXnrBVVD0WU3Cdg0+Bk+bpoG/OAlis671+zXFBtMDD+U7IfKE892KQfXbjtJXsc88FLTR5Sr/xamQrC8xBhUGSIgN170m/y0/tG04uABcyCdHmyJVcU6+kf+x+mmbU1nL9NeRYWRcnYG/aqjAogV5vB8F8kFUW3OzYCXhqYR7XQlVJmVL38IAG67+0UEakr1G5v6Xa3FwccYL9J7jjZIs3\r\n";
 		try {
 			BufferedWriter output = new
-					BufferedWriter(new FileWriter(getUserHome()+"\\.ssh\\known_hosts", false));
+					BufferedWriter(new FileWriter(getUserHome()+"/.ssh/known_hosts", false));
 			output.write(host);
 			output.close();
 		}
@@ -334,11 +360,12 @@ public class Function_Library {
 
 	}
 	private boolean isLocalGIT(String branch) {
-		File file = new File(gitFolder+"\\.git\\\\refs\\heads\\"+branch);
+		File file = new File(gitFolder+"/.git/refs/heads/"+branch);
 		return file.exists();
 	}
 	public void generateKeys(String email) {
-		File file = new File(getUserHome()+"\\.ssh");
+		writeHostFile();
+		File file = new File(getUserHome()+"/.ssh");
 		if(!file.isDirectory())
 			file.mkdir();
 
@@ -346,9 +373,9 @@ public class Function_Library {
 				+ "ssh-keygen -f /c/Users/"+getUserName()+"/.ssh/id_rsa -t rsa -N '' -C \""+email+"\" "
 				//+ "&&  /usr/bin/bash --login -i" //keep window open
 				+ "\"";
-		writeHostFile();
 
-		cmd(command);
+		if(isWindows())
+			cmd(command);
 		//add host file...
 		if(folderExists("H:\\")){
 			String destination = "H:\\.ssh";
@@ -413,11 +440,23 @@ public class Function_Library {
 		copyFolder(source, destination);
 	}
 
-	public void openLink(String URL) {
-		try {
-			Desktop.getDesktop().browse(new URI(URL));
-		} catch (IOException | URISyntaxException   e) {
-			e.printStackTrace();
+	public void openLink(String url) {
+		if(isWindows())
+			try {
+				Desktop.getDesktop().browse(new URI(url));
+			} catch (IOException | URISyntaxException   e) {
+				e.printStackTrace();
+			}
+		else{
+			if (Desktop.isDesktopSupported() && Desktop.getDesktop().isSupported(Desktop.Action.BROWSE)) {
+				try {
+					Desktop.getDesktop().browse(new URI(url));
+				} catch (IOException e) {
+					e.printStackTrace();
+				} catch (URISyntaxException e) {
+					e.printStackTrace();
+				}
+			}
 		}
 	}
 	public void addSSHPage() {
@@ -428,11 +467,21 @@ public class Function_Library {
 		}
 	}
 	private boolean sshKeysExist() {
-		File folder = new File(getUserHome()+"\\.ssh");
-		File public_rsa  = new File(getUserHome()+"\\.ssh\\id_rsa.pub");
-		File private_rsa = new File(getUserHome()+"\\.ssh\\id_rsa");
-		if(!folder.isDirectory() || !public_rsa.exists() || !private_rsa.exists())
+		File folder = new File(getUserHome()+"/.ssh");
+		File public_rsa  = new File(getUserHome()+"/.ssh/id_rsa.pub");
+		File private_rsa = new File(getUserHome()+"/.ssh/id_rsa");
+		if(!folder.isDirectory()) {
+			System.out.println("1");
 			return false;
+		}
+		else if( !public_rsa.exists() ) {
+			System.out.println("2");
+			return false;
+		}
+		else if( !private_rsa.exists()) {
+			System.out.println("3");
+			return false;
+		}
 		else
 			return true;
 	}
@@ -444,7 +493,7 @@ public class Function_Library {
 		String branch = null;
 		try {
 			BufferedReader br = new BufferedReader(
-					new FileReader(gitFolder+"\\.git\\HEAD"));
+					new FileReader(gitFolder+"/.git/HEAD"));
 			if ((line = br.readLine()) != null) {
 				String[] parsedLine;
 				parsedLine = line.split("/");
